packages/compile_tests/compile_tests/unwrap_type.stderr
error[E0599]: the method `build` exists for struct `NotUnwrapOptionContext<Option<&str>>`, but its trait bounds were not satisfied
  --> compile_tests/unwrap_type.rs:13:46
   |
6  | #[derive(WithContext)]
   |          -----------
   |          |
   |          method `build` not found for this struct
   |          doesn't satisfy `_: IntoError<NotUnwrapOption>`
...
13 |     NotUnwrapOptionContext(Some("optional")).build();
   |                                              ^^^^^ method cannot be called on `NotUnwrapOptionContext<Option<&str>>` due to unsatisfied trait bounds
   |
  ::: $RUST/core/src/option.rs
   |
   | pub enum Option<T> {
   | ------------------ doesn't satisfy `Option<&str>: Into<Option<String>>`
   |
note: trait bound `Option<&str>: Into<Option<String>>` was not satisfied
  --> compile_tests/unwrap_type.rs:6:10
   |
6  | #[derive(WithContext)]
   |          ^^^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
